# livrariaDjango

./: .gitignore  .pdm-python  db.sqlite3  pyproject.toml
config/: settings.py  urls.py
livraria/: admin.py  models.py  views.py
livraria/migrations/: 0001_initial.py  0002_editora.py  0003_autor.py  0004_livros.py  0005_rename_livros_livro.py  0006_livro_categoria_livro_editora.py  0007_alter_autor_options_livro_autores.py
livraria/models/: __init__.py  autor.py  livro.py
livraria/serializers/: livro.py
livraria/views/: autor.py  categoria.py  editora.py  livro.py
usuario/migrations/: 0001_initial.py
